# greedy-doctor

./: .gitignore  CLAUDE.md  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx
greedy_doctor/: analyze.py  api.py  classify.py  crawl.py  db.py  enrich.py  extract.py  norms.py  queue.py
greedy_doctor/sources/: dolnoslaskie.py  gdansk.py  gdynia.py  kielce.py  kujawsko_pomorskie.py  lodzkie.py  lubelskie.py  lubuskie.py  malopolskie.py  mazowieckie.py  nowytomysl.py  opolskie.py  podkarpackie.py  podlaskie.py  pomorskie.py  poznan.py  skierniewice.py  slaskie.py  sopot.py  swietokrzyskie.py  warminsko_mazurskie.py  wielkopolskie.py  zachodniopomorskie.py
tests/: conftest.py  test_analyze.py  test_api.py  test_classify_schema.py  test_crawl.py  test_dolnoslaskie.py  test_enrich.py  test_extract.py  test_gdansk.py  test_gdynia.py  test_kielce_enumerate.py  test_kujawsko_pomorskie.py  test_lodzkie.py  test_lubelskie.py  test_lubuskie.py  test_malopolskie.py  test_mazowieckie.py  test_nowytomysl.py  test_opolskie.py  test_podkarpackie.py  test_podlaskie.py  test_pomorskie.py  test_poznan_enumerate.py  test_queue.py  test_skierniewice.py  test_slaskie.py  test_sopot.py  test_swietokrzyskie.py  test_warminsko_mazurskie.py  test_wielkopolskie.py  test_zachodniopomorskie.py
tests/fixtures/: gdansk_banach.html  gdansk_bejm.html  gdansk_listing_2024.html  gdynia_radni_2024.json  gdynia_radni_2025.json  kielce_listing.html  kielce_piasecki.html  lodzkie_item_adamczyk.html  (+57 more)
