[project]
name = "greedy-doctor"
version = "0.1.0"
description = "Crawl councilor asset declarations, find doctors, compare income to medical pay norms via implied hours"
requires-python = ">=3.12"
license = "Apache-2.0"
license-files = ["LICENSE"]
dependencies = [
    "crawl4ai>=0.9.0",
    "fastapi>=0.138.0",
    "httpx>=0.28.1",
    "pdfplumber>=0.11.10",
    "psycopg[binary]>=3.3.4",
    "pydantic>=2.13.4",
    "pymupdf>=1.27.2.3",
    "uvicorn>=0.49.0",
]

[dependency-groups]
dev = ["pytest>=8", "ruff>=0.14", "mypy>=1.18"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
# frontend/, .venv itd. ruff pomija domyślnie; sprawdzamy tylko pliki .py

[tool.ruff.lint]
# E/F = pyflakes+pycodestyle, I = isort, UP = pyupgrade, B = bugbear
select = ["E", "F", "I", "UP", "B"]
# szerokość linii pilnuje formatter; E501 tylko marudzi na polskie docstringi
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
# crawl4ai/pdfplumber/pymupdf/playwright nie mają stubów — nie wywalaj się na nich
ignore_missing_imports = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
